added locaiton toggle to all locaiton forms

--- a/views/dashboard/room.handlebars
+++ b/views/dashboard/room.handlebars
@@ -20,8 +20,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">Room Location Form</h1>
-                        <p>Rooms are fixed structures in the Library such as study rooms, classrooms, offices,
-                            etc. </p>
+                        <p>Rooms are fixed structures in the Library such as study rooms, classrooms, offices, etc. </p>
                     </div> <!-- /.col-lg-12 -->
                 </div> <!-- /.row -->
 
@@ -39,8 +38,8 @@
                                     <div class="form-group" id="name-group">
                                         <label for="name">Location Name</label>
                                         <input type="text" id="name" name="name" class="form-control"
-                                               placeholder="location name"
-                                               autofocus>
+                                        placeholder="location name"
+                                        autofocus>
                                         <p class="help-block">Enter the name of the location being created.</p>
                                         <span id="nameError" class="help-block"></span>
                                     </div>
@@ -97,8 +96,8 @@
                                     <div class="form-group" id="number-group">
                                         <label for="number">Room #</label>
                                         <input type="number" id="number" name="number" class="form-control"
-                                               placeholder="ex. 201"
-                                                autofocus>
+                                        placeholder="ex. 201"
+                                        autofocus>
 
                                         <p class="help-block">Enter the room number.</p>
                                     </div>
@@ -109,8 +108,8 @@
                                     <div class="form-group" id="capacity-group">
                                         <label for="capacity">Room Capacity</label>
                                         <input type="number" id="capacity" name="capacity" class="form-control"
-                                               placeholder="ex. 32"
-                                                autofocus>
+                                        placeholder="ex. 32"
+                                        autofocus>
 
                                         <p class="help-block">Enter the room capacity.</p>
                                     </div>
@@ -125,8 +124,8 @@
                                     <div class="form-group" id="attribute-group">
                                         <label for="attribute">Attribute</label>
                                         <textarea rows="5" id="attribute" name="attribute" class="form-control"
-                                                  placeholder="Lighting, Natural, Electrical, Socket, etc."
-                                                  autofocus></textarea>
+                                        placeholder="Lighting, Natural, Electrical, Socket, etc."
+                                        autofocus></textarea>
                                         <p class="help-block">Enter the attributes the location contains.</p>
                                         <span id="attributeError" class="help-block"></span>
                                     </div>
@@ -137,8 +136,8 @@
                                     <div class="form-group" id="tag-group">
                                         <label for="tag">Tag</label>
                                         <textarea rows="5" id="tag" name="tag" class="form-control"
-                                                  placeholder="Learning Corner, Circulation Desk, etc."
-                                                  autofocus></textarea>
+                                        placeholder="Learning Corner, Circulation Desk, etc."
+                                        autofocus></textarea>
                                         <p class="help-block">Enter the tag used to identify the location.</p>
                                         <span id="tagError" class="help-block"></span>
                                     </div>
@@ -160,15 +159,15 @@
 
                                         <!-- Draw and select location control !-->
                                         <div class="col-lg-12">
-                                              <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
+                                            <div class="btn btn-primary" id="btn-toggle-locations">Toggle Locations</div>
+                                            <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
                                             <div class="btn btn-default" id="btn-box-draw">Draw By Box</div>
                                             <div class="btn btn-default" id="btn-location-select">Select Location</div>
                                             <div class="row controls hidden" id="location-draw-controls">
                                                 <div class="col-lg-12">
                                                     <div class="btn btn-primary" id="btn-location-fill">Fill</div>
                                                     <div class="btn btn-warning" id="btn-location-clear">Clear</div>
-                                                    <div class="btn btn-success" id="btn-location-save">Save Location
-                                                    </div>
+
                                                 </div>
                                             </div>
                                         </div> <!-- /.col-lg-6 !-->
@@ -187,11 +186,9 @@
                                             <div class="btn btn-default" id="btn-navigation-show">Show Grid</div>
                                             <div class="btn btn-default" id="btn-navigation-hide">Hide Grid</div>
                                             <div class="btn btn-warning" id="btn-navigation-clear">Clear</div>
-                                            <div class="btn btn-success" id="btn-navigation-save">Set Entry Point</div>
                                         </div>
                                     </div>
                                 </div>
-
                             </div> <!-- / Mark Location & Entry Point !-->
 
                             <!-- Map & Grid !-->
@@ -210,7 +207,7 @@
                             <button type="reset" class="btn btn-warning" id="btn-clear">Clear</button>
                             <button class="btn btn-danger" id="btn-cancel">Cancel</button>
                         </form>
-                    </div> <!-- col-lg-6 !-->
+                    </div> <!-- col-lg-12 !-->
                 </div> <!-- /.row !-->
 
 
