--- a/views/dashboard/unknown.handlebars
+++ b/views/dashboard/unknown.handlebars
@@ -20,8 +20,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">Unknown Location Form</h1>
-                        <p>Unknow locations are non-fixed locations in the Library such as Learning Commons south wall,
-                            etc. </p>
+                        <p>Unknow locations are non-fixed locations in the Library such as Learning Commons south wall, etc. </p>
                     </div> <!-- /.col-lg-12 -->
                 </div> <!-- /.row -->
 
@@ -118,7 +117,7 @@
                             </div> <!-- / Attribute & Tags !-->
 
 
-                            <!-- Mark Location & Entry Point !-->
+                             <!-- Mark Location & Entry Point !-->
                             <div class="row">
 
                                 <!-- Map Location Input!-->
@@ -133,15 +132,15 @@
 
                                         <!-- Draw and select location control !-->
                                         <div class="col-lg-12">
-                                              <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
+                                            <div class="btn btn-primary" id="btn-toggle-locations">Toggle Locations</div>
+                                            <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
                                             <div class="btn btn-default" id="btn-box-draw">Draw By Box</div>
                                             <div class="btn btn-default" id="btn-location-select">Select Location</div>
                                             <div class="row controls hidden" id="location-draw-controls">
                                                 <div class="col-lg-12">
                                                     <div class="btn btn-primary" id="btn-location-fill">Fill</div>
                                                     <div class="btn btn-warning" id="btn-location-clear">Clear</div>
-                                                    <div class="btn btn-success" id="btn-location-save">Save Location
-                                                    </div>
+                                                    
                                                 </div>
                                             </div>
                                         </div> <!-- /.col-lg-6 !-->
@@ -160,11 +159,9 @@
                                             <div class="btn btn-default" id="btn-navigation-show">Show Grid</div>
                                             <div class="btn btn-default" id="btn-navigation-hide">Hide Grid</div>
                                             <div class="btn btn-warning" id="btn-navigation-clear">Clear</div>
-                                            <div class="btn btn-success" id="btn-navigation-save">Set Entry Point</div>
                                         </div>
                                     </div>
                                 </div>
-
                             </div> <!-- / Mark Location & Entry Point !-->
 
                             <!-- Map & Grid !-->
