added select locaiton

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -40,6 +40,13 @@ body {
     /*min-height: calc(100% - 50px);*/
     background-color: white;
     padding-bottom: 20px;
+    min-height: 570px;
+}
+
+.page_wrapper{
+    background-color: white;
+    padding-bottom: 20px;
+    min-height: 570px;
 }
 
 @media (min-width: 768px) {
