fixes for friday demo

--- a/views/dashboard/room.handlebars
+++ b/views/dashboard/room.handlebars
@@ -193,7 +193,8 @@
 
                             <!-- Map & Grid !-->
                             <div class="form-group" id="map-group">
-                                <div id="map-wrapper">
+                                <section id="grid" style="position:absolute"></section>
+				<div id="map-wrapper">
 
                                 </div>
                             </div> <!-- / Map & Grid !-->
