--- a/views/dashboard/navigation.handlebars
+++ b/views/dashboard/navigation.handlebars
@@ -68,7 +68,8 @@
             <div class="row">
                 <!-- Map & Grid !-->
                 <div class="form-group" id="map-group">
-                    <div id="map-wrapper">
+                    <section id="grid" style="position:absolute"></section>
+		    <div id="map-wrapper">
 
                     </div> <!-- / Map & Grid !-->
                 </div>
