--- a/views/partials/home/sidebar.handlebars
+++ b/views/partials/home/sidebar.handlebars
@@ -1,6 +1,6 @@
 <!-- Sidebar !-->
 <div class="navbar-default sidebar" role="navigation">
-    <div class="sidebar-nav <!--navbar-collapse-->">
+    <div class="sidebar-nav"> <!--navbar-collapse-->
         <ul class="nav" id="side-menu">
             <li class="sidebar-search">
                 <div class="input-group custom-search-form">
