--- a/views/dashboard/details.handlebars
+++ b/views/dashboard/details.handlebars
@@ -141,7 +141,7 @@
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <div id="btn-edit" class="btn btn-warning">Edit</div>
+                        <a href="/dashboard/location/edit/{{ data }}"><div id="btn-edit" class="btn btn-warning">Edit</div></a>
                         <div id="btn-delete" class="btn btn-danger">Delete</div>
                     </div>
                 </div> <!-- /.row !-->
