--- a/public/stylesheets/tooltips.css
+++ b/public/stylesheets/tooltips.css
@@ -3,11 +3,12 @@ div.location-tooltip {
   
   z-index: 1;
   width: 250px;
-  height: 250px;
+  height: 450px;
   padding: 10px;
   font: 12px sans-serif;
   background: #ffffff;
   border: #c34500 2px solid;
+  overflow-y:scroll;
   border-radius: 8px;
   -webkit-box-shadow: 10px 10px 58px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 58px 0px rgba(0,0,0,0.75);
