small bug fixes

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -19,7 +19,7 @@
         <a class="navbar-brand" href="http://oregonstate.edu"><img src="/public/images/osu/logo.jpg?v=1"
                                                                    alt="oregon state university" width="215"
                                                                    height="78"/></a>
-        <h1 class="navbar-text">Libnav</h1>
+        <h1 class="navbar-text">LibNav</h1>
     </div> <!-- ./navbar-header !-->
 
     <!--    <ul class="nav navbar-default">
