--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -194,6 +194,25 @@
 
     {{> dashboard/javascript }}
 
+    <!-- Get data if editing a location !-->
+    <script>
+    // gets the data from route
+    var data = {{{data}}}
+
+    // location object that holds locaitond data
+    var locationOBJ  = null;
+
+    // Flag for if we are edit a locaiton 
+    var edit = false;
+
+    // if data was set then save it to locaiton data
+    if( data != null){
+        edit = true;
+        locationOBJ = data;
+    }
+
+    </script>
+
     <!-- Draw Polygons js !-->
     <script src="/public/javascripts/draw-polygon.js"></script>
 
@@ -213,15 +232,9 @@
     <script src="/public/javascripts/control-form.js" ></script>
 
     <script>
-        var data = {{{data}}}
-        var locationOBJ  = null;
-        if( data != null){
-            locationOBJ = data;
-
+        if(edit){
             loadLocation(locationOBJ);
-
         }
-
     </script>
 
 
