--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -76,7 +76,7 @@
 
 
     <!-- main search package -->
-    <script src="/fuse/src/fuse.min.js"></script>
+    <script src="/fuse/dist/fuse.min.js"></script>
 
     <!-- main searching script -->
     <script src="/public/javascripts/search.js"></script>
