--- a/views/partials/home/sidebar.handlebars
+++ b/views/partials/home/sidebar.handlebars
@@ -11,8 +11,28 @@
                         </button>
                     </span>
                 </div>
-                <!-- /input-group -->
             </li>
+            <li class="dispNavTop">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>Start Location</h5>
+                        <p id="start-location"></p>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <h5>End Location</h5>
+                        <p id="end-location"></p>
+                    </div>
+                </div>
+                <div class="row" style="margin-bottom:10px;">
+                    <div class="col-md-6 text-center">
+                        <div id="nagivation-start" class="btn btn-success">Start</div>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <div id="navigation-clear" class="btn btn-warning">Clear</div>
+                    </div>
+                </div>
+            </li>
+                <!-- /input-group -->
             <li id="search-results-wrapper" class="hidden">
                 <a href="#" id="search-results">Search Results<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" id="search-results-ul">
@@ -48,7 +68,7 @@
                 <ul class="nav nav-second-level" id="navsb-floor-6">
                 </ul>
             </li>
-            <li>
+            <li class="dispNavBot">
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h5>Start Location</h5>
@@ -59,7 +79,7 @@
                         <p id="end-location"></p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" style="margin-bottom:10px;">
                     <div class="col-md-6 text-center">
                         <div id="nagivation-start" class="btn btn-success">Start</div>
                     </div>
