fix issue with mobile nav

--- a/views/partials/home/sidebar.handlebars
+++ b/views/partials/home/sidebar.handlebars
@@ -12,7 +12,7 @@
                     </span>
                 </div>
             </li>
-            <li class="dispNavTop">
+            <!-- <li class="dispNavTop">
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h5>Start Location</h5>
@@ -30,7 +30,7 @@
                     <div class="col-md-6 text-center">
                         <div id="navigation-clear" class="btn btn-warning">Clear</div>
                     </div>
-                </div>
+                </div> -->
             </li>
                 <!-- /input-group -->
             <li id="search-results-wrapper" class="hidden">
@@ -68,7 +68,7 @@
                 <ul class="nav nav-second-level" id="navsb-floor-6">
                 </ul>
             </li>
-            <li class="dispNavBot">
+            <li class="dispNavTop">
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h5>Start Location</h5>
@@ -88,7 +88,6 @@
                     </div>
                 </div>
             </li>
-
         </ul>
     </div>
     <!-- /.sidebar-collapse -->
